# study-tasks

./: README.md  Зад_потребителя_финалка.ipynb  Задача_потребителя_чист.ipynb
Distributed ICS/лаба 1/: Lab1.docx  Lab1.html  readme.md  style.css
Intelligent systems/Lab1/: family_tree_commented.txt  family_tree_to_load.pl  hotels.pl
Microcontrollers/MC_labs_by_GUK/: MC_labs_by_GUK.atsln
Microcontrollers/MC_labs_by_GUK/MC_labs_by_GUK/: MC_labs_by_GUK.asmproj  MC_labs_by_GUK.componentinfo.xml
ProjInfSys/: OutOfCityGame.ipynb  readme.md
ProjInfSys/maze_runner/matlab/: make_choice.m  maze_runner.m  maze_statistics.m
matlab/: Modl_lab2_sub_1.m
matlab/IPST/lab2/: p2.m
matlab/IPST/lab3/: IPST_lab3_p1.m  IPST_lab3_p3.m  IPST_lab3_p4.m  IPST_lab3_p5.m
matlab/IPST/lab4/: IPST_lab4_p3.m  IPST_lab4_p3_alt.m
matlab/IPST/lab6/: IPST_lab6.m
matlab/Modl/: Modl_lab2_main.m
matlab/Modl/lab3/: CMakeLists.txt
matlab/Modl/lab3/cmake/: CMakeLists.txt  add_sources.cmake
matlab/Modl/lab3/source/: CMakeLists.txt
matlab/Modl/lab3/source/include/: CMakeLists.txt  ChartWindow.h  File.h  Reader.h  ScopeRedirect.h  Thread.h  ThreadDispatcher.h  WorkerThread.h  Writer.h  basicdefs.h
matlab/Modl/lab3/source/src/: CMakeLists.txt  ChartWindow.cpp  ChartWindow.ui  File.cpp  Reader.cpp  ScopeRedirect.cpp  ThreadDispatcher.cpp  WorkerThread.cpp  Writer.cpp  main.cpp
matlab/Modl/lab4(7)/: Modl_lab7_var1.m  Modl_lab7_var1_mod.m  Modl_lab7_var2.m
matlab/Modl/lab5(2)/: Graph_p1.m  Modl_lab5_var2_p1.m  Modl_lab5_var2_p1_balanced.m  Modl_lab5_var2_p1_combination.m  Modl_lab5_var2_p2.m  Modl_lab5_var2_p2_balanced.m  комментарий к пятой.txt
matlab/Modl/lab6/: Modl_lab9_var1.m  Modl_lab9_var2.m
matlab/Modl/lab7/: Modl_lab10_Erlang.m  Modl_lab10_Poiss.m  Modl_lab10_Reg.m
matlab/TIPS/: Chaos.fig  DinMap2.m
matlab/TIPS/lab2/: IPST_lab2_p1.m  IPST_lab2_p2.m  IPST_lab2_p3.m  IPST_lab2_p4.m  IPST_lab2_p5.m  IPST_lab2_p6.m
matlab/TIPS/lab3/: IPST_lab3_p2.m  IPST_lab3_p6.m  main.m
matlab/TIPS/lab6/: IPST_lab5_p3.m  IPST_lab6_various.m  LAB6_bar.fig
matlab/TIPS/lab7/: IPST_lab7.m
matlab/ТИПС/: Chaos.p  DinMap2.fig  mycomet.m
matlab/ТИПС/ЛАБ 6/: IPST_lab6.m  IPST_lab6_various.m
matlab/ТИПС/ЛАБ 7/: Fractan.cnt  Fractan.hlp  заметки по лабе 7.txt
reports/course_3/IPST/: LR_2_Назьмов.docx  LR_3_Назьмов.docx  LR_4_Назьмов.docx  LR_5_Назьмов.docx  LR_6_Назьмов.docx  LR_7_Назьмов.docx
(+21 files in other folders)
